# DAMA-BAX

./: .gitignore  README.md  config.example.yaml  job.sh  pyproject.toml  run.py  verify.py
core/: bax_core.py  config.py  da_NN.py  da_ssrl.py  da_utils.py  da_virtual_opt.py  dama_utils.py
docs/: API_QUICK_REFERENCE.md  CONTRIBUTING.md  DAMA_EXAMPLE.md  FRAMEWORK_GUIDE.md
examples/: README.md
examples/dama/: __init__.py  dama_algo.py  dama_objectives.py  dama_oracles.py  run_dama.py  run_dama_api.py
examples/dama/resources/matlab_data/: data_SSRLX_gen100.mat  data_setup_H6BA_10b_6var.mat  dpp0.mat  init_config.mat  ma_config.mat
examples/dama/resources/rings/: ring0.pkl  ring_s1.pkl  ring_s10.pkl  ring_s11.pkl  ring_s12.pkl  ring_s13.pkl  ring_s14.pkl  ring_s15.pkl  ring_s16.pkl  ring_s17.pkl  ring_s18.pkl  ring_s19.pkl  ring_s2.pkl  ring_s20.pkl  ring_s21.pkl  ring_s22.pkl  ring_s23.pkl  ring_s24.pkl  ring_s25.pkl  ring_s3.pkl  ring_s4.pkl  ring_s5.pkl  ring_s6.pkl  ring_s7.pkl  ring_s8.pkl  ring_s9.pkl
examples/dama/resources/setup/: setup.npz
examples/dama/utils/: __init__.py  da_ssrl.py  da_utils.py  da_virtual_opt.py  dama_resources.py  dama_utils.py
examples/synthetic/: run_synthetic.py  run_synthetic_api.py
examples/synthetic_simple/: run_simple.py  run_simple_api.py
