[project]
name = "dama-bax"
version = "0.1.0"
description = "DAMA-BAX: Bayesian Algorithm Execution for Multi-Objective Optimization of Dynamic and Momentum Aperture in Particle Accelerators"
authors = [
    {name = "SLAC National Accelerator Laboratory"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
    "torch>=1.10",
    "scikit-learn>=0.24",
    "tqdm>=4.60",
    "pymoo>=0.5",
    "pyDOE>=0.3.8",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py38"
